--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Continuous Testing
 
 on:
   push:
-    branches: [main]
+    branches: [main, deploy-testing]
   pull_request:
-    branches: [main]
+    branches: [main, deploy-testing]
 
 jobs:
   test:
